update airplanecard component fix the if & for conditions

--- a/src/app/components/airplanecard/airplanecard.component.css
+++ b/src/app/components/airplanecard/airplanecard.component.css
@@ -6,7 +6,13 @@
     height: 100vh;
     background-color:  #6c5ce7;
 }
-
+.card-wrapper
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .card
 {
     display: flex;
