--- a/src/app/components/deleteflight/deleteflight.component.html
+++ b/src/app/components/deleteflight/deleteflight.component.html
@@ -30,7 +30,7 @@
                     
                     <tr class="tbt">
                         <td colspan="7">
-                            <button class="bt delete" type="submit" (click)="delete(flight.flight_number)" onclick="window.location='http://localhost:4200/ViewAllFlights'">Delete Flight</button>
+                            <button class="bt delete" type="submit" (click)="delete(flight.flight_number)">Delete Flight</button>
                         </td>
                     </tr>
                     <tr class="tbt">
