--- a/src/app/components/addflight/addflight.component.css
+++ b/src/app/components/addflight/addflight.component.css
@@ -57,6 +57,11 @@
     margin-top: 3%;
     text-align: center;
 }
+.check{
+    text-align: center;
+    margin-bottom: 10px;
+    
+}
 .msg{
     
     color:red;
