update displayflight.html, displayflight.ts add header conditionally

--- a/src/app/components/displayflight/displayflight.component.html
+++ b/src/app/components/displayflight/displayflight.component.html
@@ -1,12 +1,12 @@
- <app-header></app-header>
- <header class="logged-in-header">
+ <app-header *ngIf = "isLoggedIn"></app-header >
+ <header class="logged-in-header" *ngIf = "!isLoggedIn">
     <div class="logo">
         <a [routerLink]="['/']"> LOGO </a>   
      </div>
     <div class="nav-items">
         <ul>
             <li><a [routerLink]="['/flight/search']">Search</a></li>
-            <li><a [routerLink]="['/login']">Login</a></li>
+            <li><a [routerLink]="['/login']">Logout</a></li>
             <li><a [routerLink]="['/signup']" class="avatar"><fa-icon [icon]="faUser"></fa-icon></a></li>
           </ul>
     </div>
