update all these components change header depending on loggedin state

--- a/src/app/components/displayflight/displayflight.component.css
+++ b/src/app/components/displayflight/displayflight.component.css
@@ -7,7 +7,7 @@
  
 }
 
-header 
+/* header 
 {
     display: flex;
     align-items: center;
@@ -69,7 +69,7 @@ ul {
   a:hover:after { 
     width: 90%; 
     left: 1rem; 
-  }
+  } */
 /* *********SEARCH DETAILS***************** */
 
 .search-details
