--- a/src/app/components/displayflight/displayflight.component.html
+++ b/src/app/components/displayflight/displayflight.component.html
@@ -1,16 +1,6 @@
- <app-header *ngIf = "isLoggedIn"></app-header >
- <header class="logged-in-header" *ngIf = "!isLoggedIn">
-    <div class="logo">
-        <a [routerLink]="['/']"> LOGO </a>   
-     </div>
-    <div class="nav-items">
-        <ul>
-            <li><a [routerLink]="['/flight/search']">Search</a></li>
-            <li><a [routerLink]="['/login']">Logout</a></li>
-            <li><a [routerLink]="['/signup']" class="avatar"><fa-icon [icon]="faUser"></fa-icon></a></li>
-          </ul>
-    </div>
- </header> 
+ <app-header *ngIf="!isLoggedIn"></app-header>
+ <app-loggedinheader *ngIf="isLoggedIn == true"></app-loggedinheader>
+
  <div class="search-details">
     <div class="heading">
         <h2 class="heading--title">Search Results</h2>
