--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -93,6 +93,16 @@
     font-size: 1.6rem;
     margin-top: 3rem;
 }
+.create
+{ 
+    padding-left:10px;
+    padding-top:30px;
+    font-size: small;
+}
+.fa-arrow-circle-right
+{ 
+    padding:5px;
+}
 /**********************************************/
 @media screen and (max-width:500px)
 {
