--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -116,8 +116,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-5 inputgroup">
+                <div class="col-12 col-md-11 inputgroup bt">
                     <button type="submit" class="submitbtn" > Submit </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-11 inputgroup bt">
+                    <a class="login" [routerLink]="['/Login']">Already have an account? Login <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
                 </div>
             </div>
 
