--- a/src/app/components/loggedinheader/loggedinheader.component.html
+++ b/src/app/components/loggedinheader/loggedinheader.component.html
@@ -5,7 +5,7 @@
     <div class="nav-items">
         <ul>
             <li><a [routerLink]="['/flight/search']">Search</a></li>
-            <li><a [routerLink]="['/login']">Logout</a></li>
+            <li><a (click) = "handlelogout()">Logout</a></li>
             <li><a [routerLink]="['/signup']" class="avatar"><fa-icon [icon]="faUser"></fa-icon></a></li>
         </ul>
     </div>
