--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
 
             </div>
             <button type="submit" class="submitbtn"> Login </button>
-            <a class="create" [routerLink]="['/signup']">Create Account<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+            <a class="loginsignupbtn" [routerLink]="['/signup']">Create Account<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
 
         </form>
 
