--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -122,7 +122,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-11 inputgroup bt">
-                    <a class="login" [routerLink]="['/Login']">Already have an account? Login <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+                    <a class="login" [routerLink]="['/login']">Already have an account? Login <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
                 </div>
             </div>
 
