updateloggedinheader component update routes

--- a/src/app/components/loggedinheader/loggedinheader.component.css
+++ b/src/app/components/loggedinheader/loggedinheader.component.css
@@ -45,6 +45,7 @@ ul {
     display: inline-block;
     padding: 15px 20px;
     position: relative;
+    cursor: pointer;
   }
   a:after {    
     background: none repeat scroll 0 0 transparent;
