--- a/src/app/components/loggedinheader/loggedinheader.component.html
+++ b/src/app/components/loggedinheader/loggedinheader.component.html
@@ -6,7 +6,7 @@
         <ul>
             <li><a [routerLink]="['/flight/search']">Search</a></li>
             <li><a (click) = "handlelogout()">Logout</a></li>
-            <li><a [routerLink]="['/signup']" class="avatar"><fa-icon [icon]="faUser"></fa-icon></a></li>
+            <li><a [routerLink]="['/flight/user/dashboard']" class="avatar"><fa-icon [icon]="faUser"></fa-icon></a></li>
         </ul>
     </div>
  </header> 
